--- a/guide/index.html
+++ b/guide/index.html
@@ -1,90 +1,132 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="description" content="">
-<meta name="HandheldFriendly" content="True">
-<meta name="MobileOptimized" content="320">
-<meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>PaladinsPHP Documentation</title>
-<link rel="alternate" type="application/rss+xml" title="frittt.com" href="feed/index.html">
-<link href="http://fonts.googleapis.com/css?family=Raleway:700,300" rel="stylesheet"
-        type="text/css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/prettify.css">
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>PaladinsPHP Documentation</title>
+    <link rel="alternate" type="application/rss+xml" title="frittt.com" href="feed/index.html">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:700,300" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prettify.css">
 </head>
+
 <body>
-<div class="wrapper">
-<nav>
- 
-  	<div class="pull-left">
-    	<h1><a href="javascript:"><img src="img/icon.png" alt="Free Documentation Template Icon" /> <span>PaladinsPHP Starter Guide</span></a></h1>
+    <div class="wrapper">
+        <nav>
+
+            <div class="pull-left">
+                <h1><a href="javascript:"><img src="img/icon.png" alt="Free Documentation Template Icon" /> <span>PaladinsPHP Starter Guide</span></a></h1>
+            </div>
+
+        </nav>
+        <header>
+            <div class="container">
+                <h2 class="lone-header">PaladinsPHP API Wrapper starter guide and documentation</h2>
+            </div>
+        </header>
+        <section>
+            <div class="container">
+                <ul class="docs-nav">
+                    <li><strong>Getting Started</strong></li>
+                    <li><a href="#welcome" class="cc-active">Getting Started</a></li>
+                    <li><a href="#license" class="cc-active">License</a></li>
+                    <li class="separator"></li>
+                    <li><strong>Object Docs</strong></li>
+                    <li><a href="#champion" class="cc-active">Champion</a></li>
+
+                </ul>
+                <div class="docs-content">
+                    <h2> Getting Started</h2>
+                    <h3 id="welcome"> PaladinsPHP <img src="https://travis-ci.org/bennetgallein/PaladinsPHP.svg?branch=master" /></h3>
+                    <p>This a wrapper for the Paladins API by Hi-Rez studios.</p>
+                    <p>You can find the PHP Documentation here: <a href="https://bennetgallein.github.io/PaladinsPHP">https://bennetgallein.github.io/PaladinsPHP</a></p>
+
+                    <h3>Installing</h3>
+                    <p>You can either copy the PHP file directly into your project or <b>preferable</b> just use composer.</p>
+                    <pre class="prettyprint">composer require bennetgallein/paladins-php</pre>
+                    <br>
+                    <h3>Usage</h3>
+                    <p>This library is designed to be as easy to use, as possible, so the start is not that hard. Tho, you should know how to use composer:</p>
+                    <pre class="prettyprint">&lt;?php
+
+namespace Paladins;
+
+use \Paladins\Paladins;
+
+$devId = 'YOUR_DEV_ID';
+$authKey = 'YOUR_DEV_AUTHKEY';
+$format = Paladins::JSON; // see Documentation
+$lang = Paladins::ENGLISH; // see Documentation
+
+$paladins = new Paladins($devId, $authKey, $format, $lang, &quot;localhost, &quot;root_user&quot;, &quot;root_password&quot;, &quot;database_name&quot;);
+
+$paladins-&gt;connect();
+?&gt;
+</pre>
+                    <p><b>NOTE:</b> The API automatically renews the session with help of a MySQL Database. Therefore you need the MySQL Parameters. Default Parameters for host, user, password and database are the following: "localhost, root, root and PaladinsAPI".</p>
+
+                    <p><b>Language and Format:</b></p>
+                    <p>This library offers a few constats which are definetly good to use!</p>
+                    <p>Language Codes:</p>
+                    <pre class="prettyprint">const ENGLISH = 1;
+const GERMAN = 2;
+const FRENCH = 3;
+const SPANISH = 7;
+const SPANISHLA = 9; // Spanish (Latin America)
+const PORTUGUESE = 10;
+const RUSSIAN = 11;
+const POLISH = 12;
+const TURKISH = 13;
+</pre>
+                    <p>Response Formats:</p>
+                    <pre class="prettyprint">const JSON = 'Json';
+const XML = 'xml';
+</pre>
+                    <p>Access them with: Paladins::&lt;NAME&gt; for example: Paladins::ENGLISH;</p>
+                    <br>
+                    <h3><b>Important for connecting!</b></h3>
+                    <p>The Basic function to connect with the API-Endpoint. It takes 4 Parameters, not more, not less. $devId, $authKey, $format, $lang, $host, $user, $password, $database, where $format is the response format of the API and $lang the language you want to use. The $host, $user, $password and $database are MySQL Parameters. <b>Be sure to have a Database setup!</b> Table creation does the API itselfs.</p>
+                    <h3 id="license"> License</h3>
+                    <p> MIT License Copyright (c) 2017 Bennet Gallein <br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. <br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+                    </p>
+                    <hr>
+                    <h2> Customizing Opineo</h2>
+                    <p> Before you make any cusomization or even start using Opineo create a 'div' element and assign it some id. Now add references to necessary Javascrip files e.g.</p>
+                    <ul>
+                        <li>A reference to latest jQuery library </li>
+                        <li>A reference to Opineo script file sudo nano opineo.js</li>
+                    </ul>
+                    <p> The following customization options are available in Opineo:</p>
+                    <h3 id="champion">Champion</h3>
+                    <p>The Champion Object is the Champion you know from Paladins. Below are all function that are available.</p>
+                    <p>Load a Champion object by doing this:</p>
+                    <pre class="prettyprint">$champion = new Champion($paladins->getChampion("Androxus"));</pre>
+                    <ul>
+                        <li>Member Fields (Variables) are in the <a target="_blank" href="https://bennetgallein.github.io/PaladinsPHP/classes/Paladins_Champion_Champion.xhtml#members">phpdocs</a> </li>
+                        <li>Functions are in the <a target="_blank" href="https://bennetgallein.github.io/PaladinsPHP/classes/Paladins_Champion_Champion.xhtml#methods">phpdocs</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="vibrant centered">
+            <div class="">
+                <h4> This documentation template is provided by <a href="http://www.frittt.com" target="_blank">Frittt Templates</a>. You can download and use this template for free. If you have used this template, please pay the developer's effort by Tweeting, sharing on Facebook, social mention or with a linkback. Enjoy! :)</h4>
+            </div>
+        </section>
+        <footer>
+            <div class="">
+                <p> &copy; Copyright Bennet Gallein. All Rights Reserved.</p>
+            </div>
+        </footer>
     </div>
-
-</nav>
-<header>
-  <div class="container">
-    <h2 class="lone-header">PaladinsPHP API Wrapper starter guide and documentation</h2>
-  </div>
-</header>
-<section>
-  <div class="container">
-    <ul class="docs-nav">
-      <li><strong>Getting Started</strong></li>
-      <li><a href="#welcome" class="cc-active">Getting Started</a></li>
-      <li><a href="#license" class="cc-active">License</a></li>
-      <li class="separator"></li>
-      <li><strong>Object Docs</strong></li>
-      <li><a href="#champion" class="cc-active">Champion</a></li>
-
-    </ul>
-    <div class="docs-content">
-      <h2> Getting Started</h2>
-      <h3 id="welcome"> PaladinsPHP <img src="https://travis-ci.org/bennetgallein/PaladinsPHP.svg?branch=master" /></h3>
-        <p>This a wrapper for the Paladins API by Hi-Rez studios.</p>
-        <p>You can find the PHP Documentation here: <a href="https://bennetgallein.github.io/PaladinsPHP">https://bennetgallein.github.io/PaladinsPHP</a></p>
-      
-
-      <h3 id="license"> License</h3>
-      <p> This Feedback Collection and Polling widget is free for personal and commercial
-        projects as long as you are providing a link back to this page. If you don’t want
-        to provide a link back, simply contribute to the development and improvement of
-        this tool. To contribute to this and many other interesting projects, go to Support
-        Efforts and become a patron.</p>
-      <hr>
-      <h2> Customizing Opineo</h2>
-      <p> Before you make any cusomization or even start using Opineo create a 'div' element
-        and assign it some id. Now add references to necessary Javascrip files e.g.</p>
-      <ul>
-        <li>A reference to latest jQuery library </li>
-        <li>A reference to Opineo script file sudo nano opineo.js</li>
-      </ul>
-      <p> The following customization options are available in Opineo:</p>
-      <h3 id="champion">Champion</h3>
-      <p>The Champion Object is the Champion you know from Paladins. Below are all function that are available.</p>
-        <p>Load a Champion object by doing this:</p>
-      <pre class="prettyprint">$champion = new Champion($paladins->getChampion("Androxus"));</pre>
-      <ul>
-          <li>Member Fields (Variables) are in the <a target="_blank" href="https://bennetgallein.github.io/PaladinsPHP/classes/Paladins_Champion_Champion.xhtml#members">phpdocs</a> </li>
-        <li>Functions are in the <a target="_blank" href="https://bennetgallein.github.io/PaladinsPHP/classes/Paladins_Champion_Champion.xhtml#methods">phpdocs</a></li>
-      </ul>
-    </div>
-  </div>
-</section>
-<section class="vibrant centered">
-  <div class="">
-    <h4> This documentation template is provided by <a href="http://www.frittt.com" target="_blank">Frittt Templates</a>. You can download and use this template for free. If you have used this template, please pay the developer's effort by Tweeting, sharing on Facebook, social mention or with a linkback. Enjoy! :)</h4>
-  </div>
-</section>
-<footer>
-  <div class="">
-    <p> &copy; Copyright Bennet Gallein. All Rights Reserved.</p>
-  </div>
-</footer>
-</div>
-<script src="js/jquery.min.js"></script> 
-<script type="text/javascript" src="js/prettify/prettify.js"></script> 
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
-<script src="js/layout.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/prettify/prettify.js"></script>
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
+    <script src="js/layout.js"></script>
 </body>
+
 </html>
