--- a/guide/index.html
+++ b/guide/index.html
@@ -51,7 +51,7 @@
                     <br>
                     <h3>Usage</h3>
                     <p>This library is designed to be as easy to use, as possible, so the start is not that hard. Tho, you should know how to use composer:</p>
-                    <pre class="prettyprint">&lt;?php
+                    <pre class="prettyprint lang-php">&lt;?php
 
 namespace Paladins;
 
@@ -62,7 +62,7 @@ $authKey = 'YOUR_DEV_AUTHKEY';
 $format = Paladins::JSON; // see Documentation
 $lang = Paladins::ENGLISH; // see Documentation
 
-$paladins = new Paladins($devId, $authKey, $format, $lang, &quot;localhost, &quot;root_user&quot;, &quot;root_password&quot;, &quot;database_name&quot;);
+$paladins = new Paladins($devId, $authKey, $format, $lang, &quot;localhost&quot;, &quot;root_user&quot;, &quot;root_password&quot;, &quot;database_name&quot;);
 
 $paladins-&gt;connect();
 ?&gt;
@@ -94,8 +94,6 @@ const XML = 'xml';
                     <p> MIT License Copyright (c) 2017 Bennet Gallein <br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. <br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
                     </p>
                     <hr>
-
-                    <p> The following customization options are available in Opineo:</p>
                     <h3 id="champion">Champion</h3>
                     <p>The Champion Object is the Champion you know from Paladins. Below are all function that are available.</p>
                     <p>Load a Champion object by doing this:</p>
@@ -120,7 +118,7 @@ const XML = 'xml';
     </div>
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/prettify/prettify.js"></script>
-    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=php&skin=sunburst"></script>
     <script src="js/layout.js"></script>
 </body>
 
