updated the apc install link

--- a/guide/index.html
+++ b/guide/index.html
@@ -67,7 +67,7 @@ $paladins = new Paladins($devId, $authKey, $format, $lang);
 $paladins-&gt;connect();
 ?&gt;
 </pre>
-                    <p><b>NOTE:</b> The API uses APCu to save the session. Make sure to have it installed! Instructions are here: <a href="http://php.net/manual/de/book.apcu.php">php.net</a></p>
+                    <p><b>NOTE:</b> The API uses APCu to save the session. Make sure to have it installed! Instructions are here: <a href="http://php.net/manual/en/apcu.installation.php">php.net</a></p>
 
                     <p><b>Language and Format:</b></p>
                     <p>This library offers a few constats which are definetly good to use!</p>
